# litime

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  release-please-config.json  script.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml  release-please.yml  test.yml
builder/: Dockerfile  build.sh  entrypoint.sh
src/: formatter.rs  lib.rs  main.rs  minute.rs  times.json  wrapper.rs
tests/: integration_test.rs
