[package]
name = "litime"
version = "2.0.0"
authors = ["Axel <litime@absalon.dev>"]
description = "A command line tool to display the current time ish with a literature quote"
repository = "https://github.com/ikornaselur/litime"
license = "CC-BY-NC-SA-2.5"
readme = "README.md"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
  "external/literature-clock/docs/times/*.json",
]

[dependencies]
textwrap = "0.16"
clap = { version = "4", features = ["derive"] }
termsize = "0.1"
time = { version = "0.3", features = ["local-offset", "parsing"] }
anyhow = "1"

[profile.release]
lto = true
strip = true

[build-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
