[package]
name = "litime"
version = "3.4.0"
authors = ["Axel <litime@absalon.dev>"]
description = "A command line tool to display the current time ish with a literature quote"
repository = "https://github.com/ikornaselur/litime"
license = "CC-BY-NC-SA-2.5"
readme = "README.md"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
  "external/literature-clock/docs/times/*.json",
]

[dependencies]
textwrap = { version = "0.16", default-features = false, features = ["smawk"] }
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", default-features = false, features = ["local-offset", "parsing"] }
time-tz = { version = "2", features = ["db"] }
anyhow = "1"
termcolor = "1.4.1"
terminal_size = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
